chore: Refactor tuple nodes and access (#963)
As discussed in the PR (See #918 and [this
thread](https://github.com/OpenVADL/openvadl/pull/918#discussion_r3194673715))
regarding group annotations, this refactors the current usages of the
Tuple nodes to a more general `Struct` which allows field access as
well.

Tuples are currently used in two places, namely `LetExpr`essions and
`LetStatements` as well as `Status` types. For `Let` nodes, the result
of the value expression may have a `StructType` with fields `result` and
`status`. E.g.:

```vadl
let next, status = VADL::adds(PC, 4 as Bits<32>) in
  if status.zero then
  PC := next
```

During behavior lowering the name `next` will be mapped to a
`StructGetFieldNode`, accessing the field `result` on the expression
`VADL::adds(PC, 4 as Bits<32>)`.

`StatusType` now exposes fields `negative`, `zero`, `carry` and
`overflow`, as opposed to positional indexing.